unpackaged/main/default/objects/PrivacyRequest__c/PrivacyRequest__c.object-meta.xml
<CustomObject>
    <label>Privacy Request</label>
    <nameField>
        <label>PrivacyRequest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Privacy Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>