unpackaged/main/default/objects/PrivacyRequest__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <label>Account Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Privacy Requests</relationshipLabel>
    <relationshipName>Privacy_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>