unpackaged/main/default/objects/PrivacyRequest__c/fields/AnonymizationLog__c.field-meta.xml
<CustomField>
    <fullName>AnonymizationLog__c</fullName>
    <label>Anonymization Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>