unpackaged/main/default/objects/PrivacyRequest__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <length>50</length>
    <type>Text</type>
</CustomField>